# fudajiku

./: CLAUDE.md  Cargo.nix  Cargo.toml  flake.nix
src/: lib.rs
