[package]
name = "fudajiku"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT"
description = "BLAKE3 content-addressed manifest tracking with JSON persistence"
repository = "https://github.com/pleme-io/fudajiku"
homepage = "https://github.com/pleme-io/fudajiku"
keywords = ["blake3", "manifest", "sync", "content-addressed"]
categories = ["filesystem"]

[lints.clippy]
pedantic = "warn"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
